# rust-book

10_Generics/src/: lib.rs  main.rs
11_Testing/src/: lib.rs
11_Testing/tests/: integration.rs
12_Minigrep/mingrep/: Cargo.toml
12_Minigrep/mingrep/src/: lib.rs
13_Functional/src/: lib.rs  main.rs
14_Cargo/: cargo.toml
15_SmartPointers/: Cargo.toml
15_SmartPointers/graph/src/: lib.rs
15_SmartPointers/references/src/: lib.rs  main.rs
16_Concurrency/: Cargo.toml
16_Concurrency/channels/src/: main.rs
16_Concurrency/sharedstate/: Cargo.toml
16_Concurrency/sharedstate/src/: main.rs
16_Concurrency/threads/: Cargo.toml
16_Concurrency/threads/src/: main.rs
17_Async/: Cargo.toml
17_Async/async_details/: Cargo.toml
17_Async/async_details/src/: main.rs
17_Async/concurrent_async/: Cargo.toml
17_Async/concurrent_async/src/: main.rs
17_Async/slow/: Cargo.toml
17_Async/slow/src/: main.rs
17_Async/streams/: Cargo.toml
17_Async/streams/src/: main.rs
2_GuessingGame/src/: main.rs
3_CommonConcepts/branches/src/: main.rs
3_CommonConcepts/fib/src/: main.rs
3_CommonConcepts/functions/src/: main.rs
3_CommonConcepts/loops/src/: main.rs
3_CommonConcepts/variables/src/: main.rs
4_Ownership/src/: main.rs
5_Structs/src/: main.rs
6_EnumsAndPatternMatch/src/: main.rs
7_Projects/src/: back_of_house.rs  lib.rs  main.rs
8_Collections/src/: main.rs
9_Errors/src/: main.rs
rustlings/exercises/04_primitive_types/: primitive_types2.rs  primitive_types3.rs  primitive_types5.rs
rustlings/exercises/07_structs/: structs1.rs
(+17 files in other folders)
